--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     },
     "dependencies": {
         "@tinymce/tinymce-vue": "^1.0.8",
+        "amfe-flexible": "^2.2.1",
         "axios": "^0.18.0",
         "babel-preset-vue-app": "^2.0.0",
         "element-ui": "^2.4.6",
         "jquery": "^3.3.1",
         "js-md5": "^0.7.3",
+        "lib-flexible": "^0.3.2",
         "lodash": "^4.17.10",
         "nprogress": "^0.2.0",
+        "px2rem-loader": "^0.1.9",
         "style-loader": "^0.21.0",
         "tinymce": "^4.8.2",
         "vue": "^2.5.11",
