--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "axios": "^0.18.0",
         "babel-preset-vue-app": "^2.0.0",
         "element-ui": "^2.4.6",
+        "es6-promise": "^4.2.8",
         "jquery": "^3.3.1",
         "js-md5": "^0.7.3",
         "lib-flexible": "^0.3.2",
